<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ramos.leccion.Botones">

    <Button
        android:id="@+id/btn_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:text="@string/numero_05"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@+id/btn_04"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_03" />

    <Button
        android:id="@+id/btn_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/numero_04"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_03"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/numero_03"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_02"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:textSize="36sp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="130dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/desconocido"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btn_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="102dp"
        android:text="@string/numero_02"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@+id/btn_01"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <Button
        android:id="@+id/btn_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/numero_01"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_04"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminar"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
