<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ramos.leccion.Ranking">

    <TextView
        android:id="@+id/txt_jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desconocido"
        android:textSize="36sp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="117dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aciertos"
        android:textSize="30sp"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_jugador"
        android:layout_marginLeft="29dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:text="@string/ninguno"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_jugador" />
</android.support.constraint.ConstraintLayout>
